--- a/index.html
+++ b/index.html
@@ -93,10 +93,20 @@
         <div class="container fcc">
             <div class="main-subnav fcc">
                 <ul class="subnav">
-                    <li class="subnav-li">Memory</li>
-                    <li class="subnav-li">Language</li>
-                    <li class="subnav-li">Adventure</li>
-                    <li class="subnav-li">Action</li>
+                    <li class="subnav-li">Maths
+                        <ul class="subnav-maths sub-subnav">
+                            <li>Algebra</li>
+                            <li>Calculus</li>
+                            <li>Geometry</li>
+                            <li>Logic</li>
+                            <li>Number Theory</li>
+                            <li>Trignometry</li>
+                        </ul>
+                    </li>
+                    <li class="subnav-li">Physics</li>
+                    <li class="subnav-li">English</li>
+                    <li class="subnav-li">Sign Language</li>
+                    <li class="subnav-li">Mental Exercise</li>
                 </ul>
             </div>
             <div class="slider-div fcc">
