--- a/index.html
+++ b/index.html
@@ -110,31 +110,34 @@
                 </ul>
             </div>
             <div class="slider-div fcc">
+                <div class="slider-title" style="margin-top: 5px;">
+                    <p>Recommended</p>
+                </div>
                 <div class="slider">
                     <div class="slider-item item-1 fcc active">
                         <div class="slider-img">
-                            <img src="./img/_b13c97b5-1e31-414f-bf94-f9e820585409.jpeg" alt="">
+                            <img src="./img/language.jpeg" alt="">
                         </div>
                         <div class="slider-content">
-                            <h2>Game Name 1</h2>
+                            <h2>Memory Game</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde facilis aspernatur quia a fugiat accusamus repellat, deleniti incidunt illum labore eaque modi odit delectus magni dicta saepe placeat sequi? Itaque velit dignissimos nam assumenda excepturi nemo aperiam explicabo similique eaque.</p>
                         </div>
                     </div>
                     <div class="slider-item item-2 fcc">
                         <div class="slider-img">
-                            <img src="./img/pixlr-image-generator-bcee4ce8-d617-4db8-a71e-61998c32db18.png" alt="">
+                            <img src="./img/match.png" alt="">
                         </div>
                         <div class="slider-content">
-                            <h2>Game Name 2</h2>
+                            <h2>Language Learner</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde facilis aspernatur quia a fugiat accusamus repellat, deleniti incidunt illum labore eaque modi odit delectus magni dicta saepe placeat sequi? Itaque velit dignissimos nam assumenda excepturi nemo aperiam explicabo similique eaque.</p>
                         </div>
                     </div>
                     <div class="slider-item item-3 fcc">
                         <div class="slider-img">
-                            <img src="./img/pixlr-image-generator-a1b9334e-92ce-421e-9158-3bc0bcc3b2e6.png" alt="">
+                            <img src="./img/sudoku.png" alt="">
                         </div>
                         <div class="slider-content">
-                            <h2>Game Name 3</h2>
+                            <h2>Number Game</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde facilis aspernatur quia a fugiat accusamus repellat, deleniti incidunt illum labore eaque modi odit delectus magni dicta saepe placeat sequi? Itaque velit dignissimos nam assumenda excepturi nemo aperiam explicabo similique eaque.</p>
                         </div>
                     </div>
