--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" crossorigin="anonymous">
-    <title>Game Title</title>
+    <title>Ludus Vita</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -68,14 +68,14 @@
                         <img src="https://i.pinimg.com/originals/f4/cf/ec/f4cfec4f3b4bbf24798b26aa4a5508f2.png" alt="LOGO">
                     </div>
                     <div class="logo-name">
-                        Game Name
+                        Ludus Vita
                     </div>
                 </div>
                 <nav class="left-nav">
                     <ul class="nav-bar fcc">
                         <li class="nav-li left-nav-li nav-active">Games</li>
                         <li class="nav-li left-nav-li">Quiz</li>
-                        <li class="nav-li left-nav-li">Books</li>
+                        <li class="nav-li left-nav-li">Learning</li>
                         <li class="nav-li left-nav-li">Points</li>
                         <li class="nav-li left-nav-li">Leaderboard</li>
                     </ul>
@@ -107,6 +107,7 @@
                     <li class="subnav-li">English</li>
                     <li class="subnav-li">Sign Language</li>
                     <li class="subnav-li">Mental Exercise</li>
+                    <li class="subnav-li">Video Games</li>
                 </ul>
             </div>
             <div class="slider-div fcc">
