--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                     <div class="game-div">
                         <div class="game-img-div fcc">
-                            <img src="./img/pixlr-image-generator-a1b9334e-92ce-421e-9158-3bc0bcc3b2e6.png" alt="">
+                            <img src="./img/sudoko.png" alt="">
                         </div>
                         <div class="game-content-div">
                             <span>Sudoku</span>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="game-div">
                         <div class="game-img-div fcc">
-                            <img src="./img/_b13c97b5-1e31-414f-bf94-f9e820585409.jpeg" alt="">
+                            <img src="./img/language.jpeg" alt="">
                         </div>
                         <div class="game-content-div">
                             <span>Quiz </span>
