--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                     <div class="game-div">
                         <div class="game-img-div fcc">
-                            <img src="./img/sudoko.png" alt="">
+                            <img src="./img/sudoku.png" alt="">
                         </div>
                         <div class="game-content-div">
                             <span>Sudoku</span>
